feat: add budget management and transaction category assignment